	methods have been removed.

    o	Method weights.lm(), a copy of weights.default(), has been removed.

    o	print.atomic() is now deprecated.

    o	The back-compatibility entry point Rf_log1p in standalone
	Rmath has been removed.


BUG FIXES

    o	ARMAacf() sometimes gave too many results or failed if `lag.max'
	was used.

    o	Functions anova.glm(), contrasts(), getS3method(), glm() and
	make.tables() were applying get() without asking for a
	function and/or not starting the search in the environment of
	the caller.

    o	as.data.frame.matrix() ignored the `row.names' argument.

    o	as.data.frame.list(optional = TRUE) was converting names, and
	hence data.frame(list(...), check.names = FALSE) was.  (PR#3280)

    o	as.dist(m) {mva} now obeys `diag=TRUE' or `upper=TRUE' in all cases.

    o	as.double(list()) etc was regarded as an error, because of a
	bug in isVectorizable.

    o	On some platforms the wday component of the result of
	as.POSIXlt() was corrupted when trying to guess the DST offset
	at dates the OS was unable to handle.

    o	ave(x, g) didn't work when `g' had unused levels.

    o	biplot.default() allows xlim and ylim to be set.  (PR#3168)

    o	bgroup with a null (.) delimiter was setting font to Greek.  (PR#3099)

    o	body() and formals() were looking for named functions in
	different places: they now both look starting at the
	environment in which they are called.  Several documentation
	errors for these functions have been corrected.

    o	boxplot() was ignoring cex.axis.  (PR#2628)

    o	cut.POSIXt() now passes on ... to cut.default(), as documented.

    o	crossprod() now works for 1d arrays with unnamed dimnames (PR#4092).

    o	data() sometimes failed with multiple files, as the paths
	variable got corrupted.

    o	data.frame() failed with a nonsensical error message if it
	grabbed row names from an argument that was subsequently
	recycled.  Now they are discarded, with a warning.
